# boilerplates

./: .gitignore
fastapi-boilerplate/: Dockerfile  (+5 more)
micro-user/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
micro-user/.github/workflows/: delpoy_prod.yml  deploy_dev.yml
micro-user/core/: context_processors.py  settings.py  urls.py
micro-user/core/management/: __init__.py
micro-user/core/management/commands/: __init__.py  generate_secret.py
micro-user/mainapps/accounts/: admin.py  apps.py  jwt_urls.py  models.py  serializers.py  signals.py  social.py  urls.py  views.py
micro-user/mainapps/accounts/management/commands/: consume_kafka.py  generate_secret.py
micro-user/mainapps/profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
micro-user/mainapps/profiles/migrations/: 0001_initial.py  0002_remove_userprofile_notification_preferences_and_more.py  0003_userprofile_has_taken_exam_userprofile_level_and_more.py  0004_userprofile_send_study_reminders_and_more.py  0005_remove_userprofile_has_taken_exam_and_more.py  0006_remove_userprofile_institution_and_more.py
micro-user/subapps/email_system/: emails.py
micro-user/subapps/kafka/: __init__.py  client.py
micro-user/subapps/kafka/consumers/: accounts.py  consumer.py  subscriptions.py
micro-user/subapps/kafka/producers/: accounts.py  subscription.py
micro-user/templates/accounts/: verify.html
micro-user/templates/admin/: base_site.html
micro-user/templates/email/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html
(+62 files in other folders)
